@@ -221,8 +221,8 @@ android: Build/EvilSplicer
 	sed -i 's/Extensions: /Extensions: MagicHash /i' tmp/androidtree/git-annex.cabal
 # Cabal cannot cross compile with custom build type, so workaround.
 	sed -i 's/Build-type: Custom/Build-type: Simple/' tmp/androidtree/git-annex.cabal
-# Build just once, but link twice, for 2 different versions of Android.
-	mkdir -p tmp/androidtree/dist/build/git-annex/4.0 tmp/androidtree/dist/build/git-annex/4.3
+# Build just once, but link repeatedly, for different versions of Android.
+	mkdir -p tmp/androidtree/dist/build/git-annex/4.0 tmp/androidtree/dist/build/git-annex/4.3 tmp/androidtree/dist/build/git-annex/5.0
 	if [ ! -e tmp/androidtree/dist/setup-config ]; then \
 		cd tmp/androidtree && $$HOME/.ghc/$(shell cat standalone/android/abiversion)/arm-linux-androideabi/bin/cabal configure -fAndroid $(ANDROID_FLAGS); \
 	fi
@@ -231,6 +231,9 @@ android: Build/EvilSplicer
 	cd tmp/androidtree && $$HOME/.ghc/$(shell cat standalone/android/abiversion)/arm-linux-androideabi/bin/cabal build \
 		--ghc-options=-optl-z --ghc-options=-optlnocopyreloc \
 		&& mv dist/build/git-annex/git-annex dist/build/git-annex/4.3/git-annex
+	cd tmp/androidtree && $$HOME/.ghc/$(shell cat standalone/android/abiversion)/arm-linux-androideabi/bin/cabal build \
+		--ghc-options=-optl-z --ghc-options=-optlnocopyreloc --ghc-options=-optl-fPIE --ghc-options=-optl-pie \
+		&& mv dist/build/git-annex/git-annex dist/build/git-annex/5.0/git-annex
 
 androidapp:
 	$(MAKE) android
